--- a/Laboratorios/Laboratorio1/ej2.html
+++ b/Laboratorios/Laboratorio1/ej2.html
@@ -7,6 +7,38 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table border="1">
+        <thead>
+            <th colspan="3">Control de Materias</th>
+        </thead>
+        <thead>
+            <th>Materia</th>
+            <th>Horario</th>
+            <th>Aula</th>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>Programacion Web</td>
+                <td>Martes y Jueves: 3:30PM a 5:10PM</td>
+                <td>B-13</td>
+            </tr>
+            <tr>
+                <td>Analisis y Diseño Orientado a Objetos</td>
+                <td>Lunes y Miércoles: 11:00AM a 12:40PM</td>
+                <td>MB-31</td>
+            </tr>
+            <tr>
+                <td>Medios de Comunicación Social</td>
+                <td>Martes y Jueves: 11:00AM a 12:40PM</td>
+                <td>D-13</td>
+            </tr>
+            <tr>
+                <td><i><u>Laboratorio de Programación Web</u></i></td>
+                <td>Miércoles: 9:00AM a 10:40AM</td>
+                <td>L-1 DEI</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
