--- a/Laboratorios/Laboratorio1/ej1.html
+++ b/Laboratorios/Laboratorio1/ej1.html
@@ -13,8 +13,8 @@
     <img src="img/build.jpeg" alt="Build" width="500px">
     <p>
         Como bien sabemos, <strong> el armado de una computadora puede llegar a ser una de las experiencias mas
-            emocionante.</strong> Si bien, muchos tienen sus dudas al principio de que partes la componen, en donde las
-        puedo comprar, de un componente en especifico; que ensambladora los hace mejor, etc.
+            emocionantes.</strong> Si bien, muchos tienen sus dudas al principio de que partes la componen, en donde las
+        puedo comprar; de un componente en especifico que ensambladora los hace mejor, etc.
     </p>
     <p>
         Por lo tanto, en este articulo trataremos de solventar todas esas dudas que te atormentan para que así te des
@@ -24,9 +24,8 @@
     <ul>
         <li><a href="#intro">Antes de comenzar.</a></li>
         <li><a href="#piezas">Componentes esenciales.</a></li>
-        <li><a href="#">Ensamblaje.</a></li>
-        <li><a href="#">Hablemos de precios.</a></li>
-        <li><a href="#">Conclusiones.</a></li>
+        <li><a href="#ensamblaje">Ensamblaje.</a></li>
+        <li><a href="#precio">Hablemos de precios.</a></li>
     </ul>
 
     <hr />
@@ -62,25 +61,148 @@
             <li>Gabinete (Case)</li>
             <li>Sistema de Refrigeración</li>
         </ul>
-        <p>Por si no tienes idea de que se encarga cada parte, permiteme explicarte detalladamente cada una de ellas.</p>
-        <p>Primero hablaremos sobre <b>el procesador y tarjeta madre</b>, puesto que son dos piezas sumamente importantes y de bastante prioridad. La <i>tarjeta madre</i> como su nombre indica aloja todas nuestras piezas fundamentales y las conecta mutuamente unas con otras, para que estas se comuniquen y puedan funcionar en conjunto. Es importante saber que hay distintos tipos de motherboards en cuanto a tamaño, tipo de chipset (no nos complicaremos mucho con este termino), tipo de socket y demas. Asi que simplificaremos las cosas. En cuanto a tamaño, existen las versiones <b>mini-ITX, micro-ATX, ATX y E-ATX</b>; normalmente se elige la version ATX para este tipo de ensamblados, pero si quieres un ordenador mas pequeño, puedes optar por las otras dos versiones. 
-        No nos meteremos en cuanto a chipset y socket por el momento. </p>
 
         <p>
-            En cuanto a <i>procesador</i>, o tambien llamado CPU (Unidad de Procesamiento Central) se encarga de realizar todas las operaciones logicas y encargarse de todos los procesos. Es como el cerebro del ordenador. Si de procesadores hablamos, se sabe que dos compañias reinan en este mundo: AMD e Intel, por lo tanto queda a tu criterio con cual de ellos te decides. Puedes investigar mas acerca de los modelos de los procesadores siguiendo estos dos enlaces:
+            Por si no tienes idea de que se encarga cada parte, permiteme explicarte detalladamente cada una de ellas.
+        </p>
+
+        <p>
+            Primero hablaremos sobre <b>el procesador y tarjeta madre</b>, puesto que son dos piezas sumamente
+            importantes y de bastante prioridad. La <i>tarjeta madre</i> como su nombre indica aloja todas nuestras
+            piezas fundamentales y las conecta mutuamente unas con otras, para que estas se comuniquen y puedan
+            funcionar en conjunto. Es importante saber que hay distintos tipos de motherboards en cuanto a tamaño, tipo
+            de chipset (no nos complicaremos mucho con este termino), tipo de socket y demas. Asi que simplificaremos
+            las cosas. En cuanto a tamaño, existen las versiones <b>mini-ITX, micro-ATX, ATX y E-ATX</b>; normalmente se
+            elige la version ATX para este tipo de ensamblados, pero si quieres un ordenador mas pequeño, puedes optar
+            por las otras dos versiones.
+            No nos meteremos en cuanto a chipset y socket por el momento. 
+        </p>
+
+        <img src="img/mb.jpg" alt="Asus Motherboard" width="300px">
+
+        <p>
+            En cuanto a <i><b>procesador</b></i>, o tambien llamado CPU (Unidad de Procesamiento Central) se encarga de
+            realizar todas las operaciones logicas y encargarse de todos los procesos. Es como el cerebro del ordenador.
+            Si de procesadores hablamos, se sabe que dos compañias reinan en este mundo: AMD e Intel, por lo tanto queda
+            a tu criterio con cual de ellos te decides. 
+        </p>
+
+        <img src="img/intel_vs_ryzen.png" alt="intel_vs_amd">
+
+        <p>
+            <br>
+            Puedes investigar mas acerca de los modelos de los procesadores
+            siguiendo estos dos enlaces:
             <ul>
-                <li><a href="https://www.intel.la/content/www/xl/es/products/processors.html" target="blank">Procesadores INTEL</a></li>
+                <li><a href="https://www.intel.la/content/www/xl/es/products/processors.html"
+                        target="blank">Procesadores INTEL</a></li>
                 <li><a href="https://www.amd.com/en/ryzen" target="blank">Procesadores AMD</a></li>
             </ul>
         </p>
 
         <p>
-            La <i>Tarjeta de video</i> es comunmente la pieza que mas priorizamos los <i>gamers</i> y no es de menos, ya que es la que se encarga de "mover" nuestros juegos de manera fluida, mostrando los mejores graficos posibles. Al igual que en los procesadores, tenemos actualmente dos grandes competidoras: Nvidia y AMD, aunque destacando mas la primer compañia antes mencionada. Al igual te dejaré los links para que heches un vistazo a los modelos de cada compañia:
+            La <i><b>Tarjeta de video</b></i> es comunmente la pieza que mas priorizamos los <i>gamers</i> y no es de
+            menos, ya
+            que es la que se encarga de "mover" nuestros juegos de manera fluida, mostrando los mejores graficos
+            posibles. Al igual que en los procesadores, tenemos actualmente dos grandes competidoras: Nvidia y AMD,
+            aunque destacando mas la primer compañia antes mencionada. 
+        </p>
+
+        <img src="img/amd-vs-nvidia.jpg" alt="nvidia_vs_amd" width="500px">
+
+        <br>
+        <p>
+            Al igual te dejaré los links para que heches un
+            vistazo a los modelos de cada compañia:
             <ul>
-                <li><a href="https://www.nvidia.com/en-us/shop/geforce/?page=1&limit=9&locale=en-us" target="blank">Nvidia</a></li>
+                <li><a href="https://www.nvidia.com/en-us/shop/geforce/?page=1&limit=9&locale=en-us"
+                        target="blank">Nvidia</a></li>
                 <li><a href="https://www.amd.com/en/graphics/radeon-rx-graphics" target="blank">AMD</a></li>
             </ul>
         </p>
+
+        <p>
+            Ahora hablaremos sobre los demás componentes que nos restan, primeramente la <i><b>memoria RAM</b></i>
+            que es igual un elemento crucial a la hora de tener un PC Gamer
+            puesto que ahi se alojan los datos en tiempo de ejecución del videojuego o programa en cuestion, para no
+            hacerte muy largo el cuento, debes contar con lo minimo de 8GB del tipo DDR4.
+            En cuanto a almacenamiento, te recomiendo que lo hagas de <b>tipo DUAL</b> ¿Que quiere decir esto?
+            Es decir, una configuración doble con un SSD en donde instales tu sistema operativo y programas mas
+            ocupados, puesto que este tipo de disco duro acelera enormemente los tiempos de carga;
+            y un HDD (minimo 1TB) y ahi alojes tu catalogo de juegos.
+            <br>
+        </p>
+
+        <table cellspacing="30">
+            <tr>
+                <td><img src="img/ram.jpg" alt="RAM_DDR4" width="200px"> </td>
+                <td><img src="img/ssd_hdd.jpg" alt="SSD_OR_HDD?" width="200px"></td>
+            </tr>
+        </table>
+
+        <br><br>
+        <p>
+            Sobre la <i><b>Fuente de Alimentación</b></i> es requisito que sea certificada, es decir, de una marca
+            confiable y tenga el sello de 80 Plus.
+            Para saber de cuantos Watts la necesitas, te invito a dar click al enlace siguiente: <a href="https://www.bequiet.com/es/psucalculator" target="blank">
+                Calculadora de consumo por componentes.</a>
+            <br><br>
+            Y en cuanto a <i><b>Gabinete</b></i> pues dejame decirte que eres libre de elegirlo, solo permiteme
+            recomendarte marcas que hacen bonitos gabinetes:
+            <ul>
+                <li>Corsair</li>
+                <li>Cooler Master</li>
+                <li>Thermaltake</li>
+                <li>Cougar</li>
+                <li>NZXT</li>
+                <li>Phanteks</li>
+            </ul>
+        </p>
+    </div>
+    <hr>
+    <div id="ensamblaje">
+        <h2>Ensamblaje</h2>
+        <p>
+            Ahora que ya contamos con todo lo necesario, viene la hora de la verdad: <strong>ENSAMBLAR NUESTRA
+                PC</strong>
+            Es la etapa donde muchos no nos atrevemos por haber escuchado esos "mitos" donde si tocamos los componentes
+            se dañan por la electricidad estatica, etc. Dejame decirte que las marcas tratan
+            de que este tipo de inconvenientes no sucedan. Creeme, te puede causar dudas al principio pero no hay nada
+            mejor que cuando ya terminaste y ves a tu PC funcionando.
+            Asi que, te recomiendo esta pagina para que te guies de como armarla paso a paso:
+            <br>
+            <a href="https://www.xataka.com/ordenadores/como-montar-un-ordenador-paso-a-paso-la-guia-2016"
+                target="blank">Armando tu primer PC Gamer</a>
+        </p>
+    </div>
+    <hr>
+    <div id="precio">
+        <h2>Hablemos de precios.</h2>
+        <p>
+            Claramente cada uno tiene un presupuesto limitado. Hay quienes no disponen de mucho, hay otros que disponen de cuanto ellos quieran
+            pero en este apartado trataré de darte mis recomendaciones para todo tipo de presupuestos.
+        </p>
+        <fieldset>
+            <legend>Bajo presupuesto</legend>
+            <p>
+                Hay quienes vamos ahi ajustados, por lo tanto, para esta categoría unicamente tendriamos acceso a productos de gama de entrada OJO: Aunque sean productos de "<i> 
+                gama de entrada</i>" no quiere decir que sean malos productos. Al contrario, se les puede sacar mucho partido a cada uno de ellos. No diré modelos especificos, 
+                solamente quiero que evalues, hagas cotizaciones, veas y leas reviews de dichos componentes para que al final logres un PC equilibrado a la hora de jugar y 
+                para tus trabajos o proyectos profesionales.
+            </p>
+        </fieldset>
+        <br>
+        <fieldset>
+            <legend>Alto presupuesto</legend>
+            <p>
+                Aqui ya cambia un poco la cosa, pero no te excedas, no es necesario gastar miles y miles de dolares en algo a lo que nunca le exprimiras toda la potencia que 
+                puede dar. Así que, aqui entran todos aquellos productos de gama media hasta la gama alta, aquellos en los cuales vas sobrado de potencia para que puedas realizar
+                tus proyectos o puedas jugar a la maxima calidad. Esta categoría es un poco "costosa" puesto que hay muchisimos productos en el mercado y no puedo mencionartelos
+                uno por uno, así que, aqui puedes darte el gusto de armar todo tipo de combos, comparar precios, modelos, articulos que son mas "vistosos" que otros, en fin,
+                hablar de una cantidad de dinero es sumamente dificil. Asi que mi recomendacion es que busques todo tipo de productos y analizalos, para que al final te vayas 
+                contento con lo que has elegido.
+            </p>
+        </fieldset>
     </div>
 </body>
 
