[Tarea 1] Añadiendo contenido a formacion.html y modificando el menu de navegacion de index.html

--- a/Tarea1/formacion.html
+++ b/Tarea1/formacion.html
@@ -1,12 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Estudios</title>
 </head>
+
 <body>
-    
+    <header>
+        <table border="1px" cellpadding="10px">
+            <!--Cuando se use CSS se quitaran estos atributos-->
+            <tr>
+                <td><img src="img/about_me.jpg" alt="David_Massana" width="150px"></td>
+            </tr>
+        </table>
+        <br>
+        <h1>Acerca de mí</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Regresar a ventana principal</a></li>
+                <li><a href="#estudios">Formacion Académica</a></li>
+                <li><a href="#aptitudes">Aptitudes y Conocimientos</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <hr>
+
+    <section id="estudios">
+        <h2><u>Formación académica</u></h2>
+        <ul>
+            <li>Colegio Nuestra Señora del Rosario de Fátima.</li>
+        </ul>
+        <blockquote><i>Bachillerato General. 2014-2015</i></blockquote>
+        <ul>
+            <li>Universidad Centroamericana José Simeón Cañas.</li>
+        </ul>
+        <blockquote><i>Ingeniería en Informática. 2016 - Pte.</i></blockquote>
+    </section>
+
+    <hr>
+
+    <section id="aptitudes">
+        <hgroup>
+            <h2><u>Aptitudes y Conocimientos</u></h2>
+            <h3><i>Aptitudes</i></h3>
+        </hgroup>
+        <div>
+            <ul>
+                <li>Capacidad de adaptación.</li>
+                <li>Trabajo bajo presión.</li>
+                <li>Persuasivo.</li>
+                <li>Capacidad de comunicación y relación social.</li>
+                <li>Responsable.</li>
+                <li>Dinámico.</li>
+                <li>Capacidad de trabajo en equipo.</li>
+            </ul>
+        </div>
+        <div>
+            <h3><i>Conocimientos</i></h3>
+            <table border="1px" cellpadding="15px" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Tecnologias y habilidades</th>
+                        <th>Nivel</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Microsoft Office Suite.</td>
+                        <td>Intermedio.</td>
+                    </tr>
+                    <tr>
+                        <td>Lenguaje de programación Java.</td>
+                        <td>Intermedio.</td>
+                    </tr>
+                    <tr>
+                        <td>Desarrollo Web: HTML, CSS, JavaScript.</td>
+                        <td>Intermedio.</td>
+                    </tr>
+                    <tr>
+                        <td>Bases de Datos: Microsft SQL Server, PostgreSQL.</td>
+                        <td>Básico.</td>
+                    </tr>
+                    <tr>
+                        <td>Armado de Computadoras.</td>
+                        <td>Intermedio.</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 </body>
+
 </html>
