--- a/Tarea1/index.html
+++ b/Tarea1/index.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a href="#description">Descripcion personal</a></li>
-                <li><a href="">Formacion Académica</a></li>
+                <li><a href="formacion.html">Formacion Académica</a></li>
                 <li><a href="">Intereses y Hobbies</a></li>
             </ul>
         </nav>
