[Tarea 1] Se añadio carpeta audio y ademas el apartado musica en hobbies.html

--- a/Tarea1/hobbies.html
+++ b/Tarea1/hobbies.html
@@ -7,6 +7,86 @@
     <title>Intereses y Hobbies</title>
 </head>
 <body>
-    
+    <header>
+        <table border="1px" cellpadding="10px">
+            <!--Cuando se use CSS se quitaran estos atributos-->
+            <tr>
+                <td><img src="img/about_me.jpg" alt="David_Massana" width="150px"></td>
+            </tr>
+        </table>
+        <br>
+        <h1>Intereses y Hobbies</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Regresar a ventana principal.</a></li>
+                <li><a href="">Intereses</a></li>
+                <li><a href="#music">Música</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <hr>
+
+    <section>
+
+    </section>
+    <hr>
+    <section id="music">
+        <h2>Canciones Favoritas del Momento.</h2>
+        <table border="1px" cellspacing="0px" cellpadding="15px">
+            <thead>
+                <tr>
+                    <th>Titulo</th>
+                    <th>Interpretes</th>
+                    <th>Duración</th>
+                    <th>Pista</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Entertainer</td>
+                    <td>Zayn.</td>
+                    <td>03:22 min.</td>
+                    <td> <audio controls> <source src="audio/Entertainer.mp3"> </audio> </td>
+                </tr>
+                <tr>
+                    <td>Old Town Road</td>
+                    <td>Lil Nas X feat. Billy Ray Cyrus.</td>
+                    <td>02:37 min.</td>
+                    <td> <audio controls> <source src="audio/LilNasX-Old_Town_Road_(feat.Billy_Ray_Cyrus).mp3"> </audio> </td>
+
+                </tr>
+                <tr>
+                    <td>Dancing With a Stranger</td>
+                    <td>Sam Smith, Normani.</td>
+                    <td>03:15 min.</td>
+                    <td> <audio controls> <source src="audio/Sam_Smith_Normani-Dancing_With_A_Stranger.mp3"> </audio> </td>
+                </tr>
+                <tr>
+                    <td>Do You Mean</td>
+                    <td>The Chainsmokers.</td>
+                    <td>03:24 min.</td>
+                    <td><audio controls> <source src="audio/The_Chainsmokers-Do_You_Mean.mp3"> </audio></td>
+                </tr>
+                <tr>
+                    <td>Who Do You Love</td>
+                    <td>The Chainsmokers feat. 5 Seconds of Summer.</td>
+                    <td>03:51 min.</td>
+                    <td><audio controls> <source src="audio/The_Chainsmokers_5_Seconds_of_Summer-Who_Do_You_Love.mp3"> </audio></td>
+                </tr>
+            </tbody>
+        </table>
+        <p>
+            <strong>Note:</strong> <em>Los audios no se reproducirán en la versión 8 de Internet Explorer o inferiores.</em>
+        </p>
+    </section>
+
+    <footer>
+        <br>
+        <p>
+            <i>Copyright© <i>Todo el contenido de la música esta protegida por derechos de cada uno de los autores. 
+            Prohíbase el uso para fines comerciales.</i>
+        </p>
+    </footer>
 </body>
 </html>
