[Tarea 1] Terminando el archivo hobbies.html, e incluyendo un video e imagen nueva

--- a/Tarea1/hobbies.html
+++ b/Tarea1/hobbies.html
@@ -19,7 +19,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Regresar a ventana principal.</a></li>
-                <li><a href="">Intereses</a></li>
+                <li><a href="#intereses">Intereses</a></li>
+                <li><a href="#hobbies">Hobbies</a></li>
                 <li><a href="#music">Música</a></li>
             </ul>
         </nav>
@@ -27,10 +28,51 @@
 
     <hr>
 
-    <section>
-
+    <section id="intereses">
+        <h2>Intereses</h2>
+        <dl>
+            <dt><strong>Adobe Suite.</strong></dt>
+            <dd>
+                Me interesa mucho el diseño y las artes digitales; poder plasmar mis ideas graficamente, saber combinar los colores,
+                realizar ediciones profesionales de fotografías y dibujados vectoriales.
+            </dd>
+            <br>
+            <img src="img/adobe_suite.png" alt="adobe_suite">
+            <br><br>
+            <dt><strong>Modding de PC's</strong></dt>
+            <dd>
+                Me encanta la idea de armar PC Gamer; debatir acerca de que producto es mejor, comprar los componentes y realizar el armado.
+                Pero quiero dar el siguiente paso al modding, es decir, modificar tu PC a tu antojo, customizarla de algun tema en
+                particular que te guste, como se puede ver en el siguiente video:
+            </dd>
+            <br>
+            <video width="400px" height="250px" controls>
+                <source src="video/pc_mod.mp4">
+            </video>
+        </dl>
     </section>
+
     <hr>
+
+    <section id="hobbies">
+        <h2>Hobbies</h2>
+        <p> Hago que mi tiempo libre valga la pena, realizando diferentes actividades, en las cuales no incluyo dormir. ¿Porqué? Siento
+            que desperdicio el día si lo hago, por lo tanto listaré las actividades que realizo a menudo:
+        </p>
+        <ul>
+            <li>Practicar deportes como fútbol, basketball.</li>
+            <li>Jugar videojuegos.</li>
+            <li>Reunirme con mis amigos para comer, ver peliculas, etc.</li>
+            <li>Salir con mi familia los fines de semana.</li>
+            <li>Ver videos en Youtube.</li>
+            <li>Chatear con mis amigos.</li>
+            <li>Escuchar música.</li>
+            <li>Ver series o animes.</li>
+        </ul>
+    </section>
+
+    <hr>
+    
     <section id="music">
         <h2>Canciones Favoritas del Momento.</h2>
         <table border="1px" cellspacing="0px" cellpadding="15px">
