[Tarea 1] Modificando la formacion academica

--- a/Tarea1/formacion.html
+++ b/Tarea1/formacion.html
@@ -39,6 +39,10 @@
             <li>Universidad Centroamericana José Simeón Cañas.</li>
         </ul>
         <blockquote><i>Ingeniería en Informática. 2016 - Pte.</i></blockquote>
+        <ul>
+            <li>Escuela de Idiomas UCA.</li>
+        </ul>
+        <blockquote><i>Inglés Intensivo. Nivel IX. 2019</i></blockquote>
     </section>
 
     <hr>
