[Tarea 1] Cambiando atributos de etiquetas y titulo de index.html

--- a/Tarea1/hobbies.html
+++ b/Tarea1/hobbies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -72,7 +72,7 @@
     </section>
 
     <hr>
-    
+
     <section id="music">
         <h2>Canciones Favoritas del Momento.</h2>
         <table border="1px" cellspacing="0px" cellpadding="15px">
