--- a/Tarea1/index.html
+++ b/Tarea1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Curriculum Vitae</title>
+    <title>Acerca de mi</title>
 </head>
 
 <body>
