[Tarea 1] Corrigiendo etiquetas

--- a/Tarea1/hobbies.html
+++ b/Tarea1/hobbies.html
@@ -126,7 +126,7 @@
     <footer>
         <br>
         <p>
-            <i>Copyright© <i>Todo el contenido de la música esta protegida por derechos de cada uno de los autores. 
+            <i>Copyright© Todo el contenido de la música esta protegida por derechos de cada uno de los autores. 
             Prohíbase el uso para fines comerciales.</i>
         </p>
     </footer>
