--- a/Laboratorios/Laboratorio3/ej1.html
+++ b/Laboratorios/Laboratorio3/ej1.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Galeria del Espacio</h1>
     <div class="container">
-        <span id="span1"><img src="" alt=""></span>
-        <span id="span2"><img src="" alt=""></span>
+        <span id="span1"><img src="https://www.nationalgeographic.com.es/medio/2019/08/29/la-nebulosa-de-la-helice_a7b1b2db_1500x1397.jpg" alt=""></span>
+        <span id="span2"><img src="https://www.nationalgeographic.com.es/medio/2019/06/11/recreacion-artistica-de-una-superfulguracion-solar_357839f5_1500x600.jpg" alt=""></span>
         <span id="span3"><img src="" alt=""></span>
         <span id="span4"><img src="" alt=""></span>
         <span id="span5"><img src="" alt=""></span>
