--- a/Laboratorios/Laboratorio5/index.html
+++ b/Laboratorios/Laboratorio5/index.html
@@ -10,6 +10,8 @@
     <script src="ejercicio1.js"></script>
     <script src="ejercicio2.js"></script>
     <script src="ejercicio3.js"></script>
+    <script src="ejercicio4.js"></script>
     <script src="ejercicio5.js"></script>
+    <script src="ejercicio6.js"></script>
 </body>
 </html>
